# QT_AI

./: .gitignore
Airport_inspector/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  workload_statistics.cpp  workload_statistics.h  workload_statistics.ui
